Ensure the order of the betslips and the summary column places are correct when on smaller screens
-- on phone, tables and smaller screen laptops  the summary column in the partial view will be shown first ( either on the left or on top )

-- ensure that the betslips in a certain category would be taking 100 % of the space of the container when on smaller screens ( better UX )

--- a/MatchFixer-Web-App/wwwroot/css/bet-slip/user-slip-responsive.css
+++ b/MatchFixer-Web-App/wwwroot/css/bet-slip/user-slip-responsive.css
@@ -7,6 +7,18 @@
     .card-header-bet-totals {
         font-size: 0.75em;
     }
+
+    .betslip-grid {
+        max-width: 100%;
+    }
+
+    #betSlipTabContent .summary-col {
+        order: 1;
+    }
+
+    #betSlipTabContent .betslips-col {
+        order: 2;
+    }
 }
 
 @media (max-width: 1250px) {
@@ -17,6 +29,18 @@
     .card-header-bet-totals{
         font-size: 0.65em;
     }
+
+    .betslip-grid {
+        max-width: 100%;
+    }
+
+    #betSlipTabContent .summary-col {
+        order: 1;
+    }
+
+    #betSlipTabContent .betslips-col {
+        order: 2;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -26,5 +50,17 @@
 
     .card-header-bet-totals {
         font-size: 0.5em;
+    }
+
+    .betslip-grid {
+        max-width: 100% !important;
+    }
+
+    #betSlipTabContent .summary-col {
+        order: 1;
+    }
+
+    #betSlipTabContent .betslips-col {
+        order: 2;
     }
 }
